--- a/static/css/style.green.css
+++ b/static/css/style.green.css
@@ -1143,7 +1143,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 .home-carousel {
   position: relative;
-  background: url('../img/photogrid.jpg') center center repeat;
+  background: url('../img/bg.jpg') center center repeat;
   background-size: cover;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -1162,6 +1162,7 @@ fieldset[disabled] .btn-template-primary.active {
 .home-carousel .owl-carousel {
   padding-top: 60px;
   padding-bottom: 20px;
+
 }
 .home-carousel .owl-theme .owl-controls .owl-page span {
   background: #666;
@@ -1324,6 +1325,13 @@ fieldset[disabled] .btn-template-primary.active {
   border-radius: 30px;
   margin-left: 10px;
 }
+.testimonials .item .testimonial .name-picture emojiimg {
+  float: right;
+  width: 80px;
+  border-radius: 30px;
+  margin-left: 10px;
+}
+
 .team-member {
   text-align: center;
   margin-bottom: 40px;
